* Fixed several instances of missing documentation of return types.
* Removed bits of unused commented code.
* Revised update methods that do nothing.
* Adds support for the Navigation blocks, so that protected items are hidden from users who should not see them.
* Added filter to block_core_navigation_render_inner_blocks.
* Added filter to render_block and pre_render_block.
* Fixed a PHP Deprecated notice on version_compare() when Groups is newly installed (PHP 8.x compatibility).
* Revised post count caching.

= 2.19.0 =
* WordPress 6.4 compatible.
* Requires at least WordPress 6.0.
* Requires at least PHP 7.4.
* Fixed creation of dynamic properties (PHP 8.2).
* Revised the group parent selection to show hierarchy and group names sorted when adding or editing a group.
* Fixed style and output escaping of the tree view.
* Revised the tree view and linking to group edit for authorized users.

= 2.18.0 =
* WordPress 6.1 compatible.
* WordPress 6.2-alpha compatible.
* Added the static exists() method to the Groups_Group class.
* Added checks on data used to restrict posts to avoid invalid group IDs.
* Revised the posts_where filter that restricts post access for resilience against invalid postmeta values.
* Fixed several instances of deprecated notices related to passing null where non-null values are required (PHP 8.x compatibility).
* Fixed the style of the Capabilities select container on the Groups admin screen.
* Fixed the style of the Groups select container on post admin screens and added a stylesheet for those.
* Moved inline styles to stylesheet for the user admin screen and improved appearance of the group selection fields.
* Revised several parts of code to fix documentation and format issues.
* Revised the capability admin screens to add, edit and remove capabilities, improved code and fixed several instances of missing output escaping.
* Fixed the HTML for bulk capability removal and improved styling.
* Removed some instances of unnecessary translations.